k8s/31-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: flowforge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: flowforge-worker:latest
          imagePullPolicy: IfNotPresent
