k8s/32-logindexer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logindexer
  namespace: flowforge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logindexer
  template:
    metadata:
      labels:
        app: logindexer
    spec:
      containers:
        - name: logindexer
          image: flowforge-logindexer:latest
          imagePullPolicy: IfNotPresent
