k8s/13-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: flowforge
spec:
  selector:
    app: kibana
  ports:
    - name: http
      port: 5601
      targetPort: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: flowforge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.17.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5601
